--- a/css/basic.css
+++ b/css/basic.css
@@ -6,13 +6,7 @@ html,
 body {
     background-color: __background__;
     color: __text__;
-}
-
-body {
-    -webkit-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    text-size-adjust: 100%;
+    font-family: __font_family__;
 }
 
 img,
