--- a/css/structure.css
+++ b/css/structure.css
@@ -1,58 +1,87 @@
-/**
- * This file provides styles for the general layout structure.
- *
- * @author Anika Henke <anika@selfthinker.org>
- */
+hr {
+    border: 0;
+    height: 1px;
+    background: rgba(0, 0, 0, .24);
+    margin: 2rem 0;
+}
 
-#dokuwiki__site {
-    margin: 0 auto;
+a {
+    color: __link__;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.dokuwiki {
     max-width: __site_width__;
-    padding: 1em;
-}
-
-#dokuwiki__site .wrapper {
-    position: relative;
-}
-
-#dokuwiki__aside {
-    width: __sidebar_width__;
-    float: left;
-    position: relative;
-    display: block;
-}
-[dir=rtl] #dokuwiki__aside {
-    float: right;
-}
-
-#dokuwiki__aside > div {
-    margin: 0 1.5em 0 0;
-}
-[dir=rtl] #dokuwiki__aside > div {
-    margin: 0 0 0 1.5em;
-}
-
-/* make content wider when there's no sidebar */
-.hasSidebar #dokuwiki__content {
-    float: right;
-    margin-left: -__sidebar_width__;
     width: 100%;
-}
-[dir=rtl] .hasSidebar #dokuwiki__content {
-    float: left;
-    margin-left: 0;
-    margin-right: -__sidebar_width__;
-}
+    margin: 0 auto;
+    padding: 1rem;
 
-.hasSidebar #dokuwiki__content > div {
-    margin-left: __sidebar_width__;
-}
-[dir=rtl] .hasSidebar #dokuwiki__content > div {
-    margin-left: 0;
-    margin-right: __sidebar_width__;
-}
+    > header {
+        .site-title {
+            display: flex;
+            justify-content: center;
+            margin: 1rem;
 
-.dokuwiki .aside,
-.dokuwiki .page {
-    overflow: hidden;
-    word-wrap: break-word;
+            h1, p {
+                margin: 0;
+            }
+
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
+
+            h1 {
+                background: __text__;
+                font-weight: 900;
+
+                a {
+                    display: block;
+                    padding: 0.5rem 0.75rem;
+                    color: __background__;
+                }
+            }
+        }
+
+        .breadcrumbs {
+            display: flex;
+            gap: 0.5rem;
+
+            .bchead + .bcsep {
+                display: none;
+            }
+        }
+    }
+
+    > main {
+        h1, h2, h3, h4, h5, h6 {
+            margin-top: 4rem;
+            margin-bottom: 1rem;
+
+            &:first-child {
+                margin-top: 0;
+            }
+        }
+    }
+
+    > footer {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .tools {
+        display: flex;
+        gap: 1rem;
+
+        > .tool-list {
+            display: block;
+            width: 100%;
+            padding: 0;
+        }
+    }
 }
