--- a/css/structure.css
+++ b/css/structure.css
@@ -58,6 +58,8 @@ a {
     }
 
     > main {
+        line-height: 1.5rem;
+
         h1, h2, h3, h4, h5, h6 {
             margin-top: 4rem;
             margin-bottom: 1rem;
